# dns-check-rust

./: Cargo.toml
.github/: pull_request_template.md
.github/workflows/: build.yml  scorecard.yml
src/: input.rs  lib.rs  main.rs  propagation.rs
tests/: cli.rs  cli_success.rs  cli_validation.rs
tests/support/: mod.rs
