[package]
name = "dns-check-rust"
version = "0.2.0"
edition = "2021"
rust-version = "1.94.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hickory-resolver = "0.25.2"
tokio = { version = "1.38.2", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
assert_cmd = "2.0.16"
hickory-proto = "0.26.0"
predicates = "3.1.2"
